qt/multimedia/gen_qcamera.nim


proc fcQCamera_new(): ptr cQCamera {.importc: "QCamera_new".}
proc fcQCamera_new2(deviceName: struct_miqt_string): ptr cQCamera {.importc: "QCamera_new2".}
proc fcQCamera_new3(cameraInfo: pointer): ptr cQCamera {.importc: "QCamera_new3".}
proc fcQCamera_new4(position: cint): ptr cQCamera {.importc: "QCamera_new4".}
proc fcQCamera_new5(parent: pointer): ptr cQCamera {.importc: "QCamera_new5".}
proc fcQCamera_new6(deviceName: struct_miqt_string, parent: pointer): ptr cQCamera {.importc: "QCamera_new6".}
proc fcQCamera_new7(cameraInfo: pointer, parent: pointer): ptr cQCamera {.importc: "QCamera_new7".}
proc fcQCamera_new8(position: cint, parent: pointer): ptr cQCamera {.importc: "QCamera_new8".}
proc fcQCamera_metaObject(self: pointer, ): pointer {.importc: "QCamera_metaObject".}
proc fcQCamera_metacast(self: pointer, param1: cstring): pointer {.importc: "QCamera_metacast".}
proc fcQCamera_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QCamera_metacall".}
proc fcQCamera_tr(s: cstring): struct_miqt_string {.importc: "QCamera_tr".}
proc fcQCamera_trUtf8(s: cstring): struct_miqt_string {.importc: "QCamera_trUtf8".}
proc fcQCamera_availableDevices(): struct_miqt_array {.importc: "QCamera_availableDevices".}
proc fcQCamera_deviceDescription(device: struct_miqt_string): struct_miqt_string {.importc: "QCamera_deviceDescription".}
proc fcQCamera_availability(self: pointer, ): cint {.importc: "QCamera_availability".}
proc fcQCamera_state(self: pointer, ): cint {.importc: "QCamera_state".}
proc fcQCamera_status(self: pointer, ): cint {.importc: "QCamera_status".}
proc fcQCamera_captureMode(self: pointer, ): cint {.importc: "QCamera_captureMode".}
proc fcQCamera_isCaptureModeSupported(self: pointer, mode: cint): bool {.importc: "QCamera_isCaptureModeSupported".}
proc fcQCamera_exposure(self: pointer, ): pointer {.importc: "QCamera_exposure".}
proc fcQCamera_focus(self: pointer, ): pointer {.importc: "QCamera_focus".}
proc fcQCamera_imageProcessing(self: pointer, ): pointer {.importc: "QCamera_imageProcessing".}
proc fcQCamera_setViewfinder(self: pointer, viewfinder: pointer): void {.importc: "QCamera_setViewfinder".}
proc fcQCamera_setViewfinderWithViewfinder(self: pointer, viewfinder: pointer): void {.importc: "QCamera_setViewfinderWithViewfinder".}
proc fcQCamera_setViewfinderWithSurface(self: pointer, surface: pointer): void {.importc: "QCamera_setViewfinderWithSurface".}
proc fcQCamera_viewfinderSettings(self: pointer, ): pointer {.importc: "QCamera_viewfinderSettings".}
proc fcQCamera_setViewfinderSettings(self: pointer, settings: pointer): void {.importc: "QCamera_setViewfinderSettings".}
proc fcQCamera_supportedViewfinderSettings(self: pointer, ): struct_miqt_array {.importc: "QCamera_supportedViewfinderSettings".}
proc fcQCamera_supportedViewfinderResolutions(self: pointer, ): struct_miqt_array {.importc: "QCamera_supportedViewfinderResolutions".}
proc fcQCamera_supportedViewfinderFrameRateRanges(self: pointer, ): struct_miqt_array {.importc: "QCamera_supportedViewfinderFrameRateRanges".}
proc fcQCamera_supportedViewfinderPixelFormats(self: pointer, ): struct_miqt_array {.importc: "QCamera_supportedViewfinderPixelFormats".}
proc fcQCamera_error(self: pointer, ): cint {.importc: "QCamera_error".}
proc fcQCamera_errorString(self: pointer, ): struct_miqt_string {.importc: "QCamera_errorString".}
proc fcQCamera_supportedLocks(self: pointer, ): cint {.importc: "QCamera_supportedLocks".}
proc fcQCamera_requestedLocks(self: pointer, ): cint {.importc: "QCamera_requestedLocks".}
proc fcQCamera_lockStatus(self: pointer, ): cint {.importc: "QCamera_lockStatus".}
proc fcQCamera_lockStatusWithLock(self: pointer, lock: cint): cint {.importc: "QCamera_lockStatusWithLock".}
proc fcQCamera_setCaptureMode(self: pointer, mode: cint): void {.importc: "QCamera_setCaptureMode".}
proc fcQCamera_load(self: pointer, ): void {.importc: "QCamera_load".}
proc fcQCamera_unload(self: pointer, ): void {.importc: "QCamera_unload".}
proc fcQCamera_start(self: pointer, ): void {.importc: "QCamera_start".}
proc fcQCamera_stop(self: pointer, ): void {.importc: "QCamera_stop".}
proc fcQCamera_searchAndLock(self: pointer, ): void {.importc: "QCamera_searchAndLock".}
proc fcQCamera_unlock(self: pointer, ): void {.importc: "QCamera_unlock".}
proc fcQCamera_searchAndLockWithLocks(self: pointer, locks: cint): void {.importc: "QCamera_searchAndLockWithLocks".}
proc fcQCamera_unlockWithLocks(self: pointer, locks: cint): void {.importc: "QCamera_unlockWithLocks".}
proc fcQCamera_stateChanged(self: pointer, state: cint): void {.importc: "QCamera_stateChanged".}
proc fQCamera_connect_stateChanged(self: pointer, slot: int) {.importc: "QCamera_connect_stateChanged".}
proc fcQCamera_captureModeChanged(self: pointer, param1: cint): void {.importc: "QCamera_captureModeChanged".}
proc fQCamera_connect_captureModeChanged(self: pointer, slot: int) {.importc: "QCamera_connect_captureModeChanged".}
proc fcQCamera_statusChanged(self: pointer, status: cint): void {.importc: "QCamera_statusChanged".}
proc fQCamera_connect_statusChanged(self: pointer, slot: int) {.importc: "QCamera_connect_statusChanged".}
proc fcQCamera_locked(self: pointer, ): void {.importc: "QCamera_locked".}
proc fQCamera_connect_locked(self: pointer, slot: int) {.importc: "QCamera_connect_locked".}
proc fcQCamera_lockFailed(self: pointer, ): void {.importc: "QCamera_lockFailed".}
proc fQCamera_connect_lockFailed(self: pointer, slot: int) {.importc: "QCamera_connect_lockFailed".}
proc fcQCamera_lockStatusChanged(self: pointer, status: cint, reason: cint): void {.importc: "QCamera_lockStatusChanged".}
proc fQCamera_connect_lockStatusChanged(self: pointer, slot: int) {.importc: "QCamera_connect_lockStatusChanged".}
proc fcQCamera_lockStatusChanged2(self: pointer, lock: cint, status: cint, reason: cint): void {.importc: "QCamera_lockStatusChanged2".}
proc fQCamera_connect_lockStatusChanged2(self: pointer, slot: int) {.importc: "QCamera_connect_lockStatusChanged2".}
proc fcQCamera_errorWithQCameraError(self: pointer, param1: cint): void {.importc: "QCamera_errorWithQCameraError".}
proc fQCamera_connect_errorWithQCameraError(self: pointer, slot: int) {.importc: "QCamera_connect_errorWithQCameraError".}
proc fcQCamera_errorOccurred(self: pointer, param1: cint): void {.importc: "QCamera_errorOccurred".}
proc fQCamera_connect_errorOccurred(self: pointer, slot: int) {.importc: "QCamera_connect_errorOccurred".}
proc fcQCamera_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QCamera_tr2".}
proc fcQCamera_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QCamera_tr3".}
proc fcQCamera_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QCamera_trUtf82".}
proc fcQCamera_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QCamera_trUtf83".}
proc fcQCamera_supportedViewfinderSettings1(self: pointer, settings: pointer): struct_miqt_array {.importc: "QCamera_supportedViewfinderSettings1".}
proc fcQCamera_supportedViewfinderResolutions1(self: pointer, settings: pointer): struct_miqt_array {.importc: "QCamera_supportedViewfinderResolutions1".}
proc fcQCamera_supportedViewfinderFrameRateRanges1(self: pointer, settings: pointer): struct_miqt_array {.importc: "QCamera_supportedViewfinderFrameRateRanges1".}
proc fcQCamera_supportedViewfinderPixelFormats1(self: pointer, settings: pointer): struct_miqt_array {.importc: "QCamera_supportedViewfinderPixelFormats1".}
proc fQCamera_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QCamera_virtualbase_metacall".}
proc fcQCamera_override_virtual_metacall(self: pointer, slot: int) {.importc: "QCamera_override_virtual_metacall".}
proc fQCamera_virtualbase_availability(self: pointer, ): cint{.importc: "QCamera_virtualbase_availability".}
proc fcQCamera_override_virtual_availability(self: pointer, slot: int) {.importc: "QCamera_override_virtual_availability".}
proc fQCamera_virtualbase_isAvailable(self: pointer, ): bool{.importc: "QCamera_virtualbase_isAvailable".}
proc fcQCamera_override_virtual_isAvailable(self: pointer, slot: int) {.importc: "QCamera_override_virtual_isAvailable".}
proc fQCamera_virtualbase_service(self: pointer, ): pointer{.importc: "QCamera_virtualbase_service".}
proc fcQCamera_override_virtual_service(self: pointer, slot: int) {.importc: "QCamera_override_virtual_service".}
proc fQCamera_virtualbase_bind(self: pointer, param1: pointer): bool{.importc: "QCamera_virtualbase_bind".}
proc fcQCamera_override_virtual_bindX(self: pointer, slot: int) {.importc: "QCamera_override_virtual_bind".}
proc fQCamera_virtualbase_unbind(self: pointer, param1: pointer): void{.importc: "QCamera_virtualbase_unbind".}
proc fcQCamera_override_virtual_unbind(self: pointer, slot: int) {.importc: "QCamera_override_virtual_unbind".}
proc fQCamera_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QCamera_virtualbase_event".}
proc fcQCamera_override_virtual_event(self: pointer, slot: int) {.importc: "QCamera_override_virtual_event".}
proc fQCamera_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QCamera_virtualbase_eventFilter".}
proc fcQCamera_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QCamera_override_virtual_eventFilter".}
proc fQCamera_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QCamera_virtualbase_timerEvent".}
proc fcQCamera_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QCamera_override_virtual_timerEvent".}
proc fQCamera_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QCamera_virtualbase_childEvent".}
proc fcQCamera_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QCamera_override_virtual_childEvent".}
proc fQCamera_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QCamera_virtualbase_customEvent".}
proc fcQCamera_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QCamera_override_virtual_customEvent".}
proc fQCamera_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QCamera_virtualbase_connectNotify".}
proc fcQCamera_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QCamera_override_virtual_connectNotify".}
proc fQCamera_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QCamera_virtualbase_disconnectNotify".}
proc fcQCamera_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QCamera_override_virtual_disconnectNotify".}
proc fcQCamera_delete(self: pointer) {.importc: "QCamera_delete".}
proc fcQCameraFrameRateRange_new(): ptr cQCameraFrameRateRange {.importc: "QCamera__FrameRateRange_new".}
proc fcQCameraFrameRateRange_new2(minimum: float64, maximum: float64): ptr cQCameraFrameRateRange {.importc: "QCamera__FrameRateRange_new2".}
proc fcQCameraFrameRateRange_new3(param1: pointer): ptr cQCameraFrameRateRange {.importc: "QCamera__FrameRateRange_new3".}
proc fcQCameraFrameRateRange_delete(self: pointer) {.importc: "QCamera__FrameRateRange_delete".}


func init*(T: type QCamera, h: ptr cQCamera): QCamera =
  T(h: h)
proc create*(T: type QCamera, ): QCamera =

  QCamera.init(fcQCamera_new())
proc create*(T: type QCamera, deviceName: seq[byte]): QCamera =

  QCamera.init(fcQCamera_new2(struct_miqt_string(data: cast[cstring](if len(deviceName) == 0: nil else: unsafeAddr deviceName[0]), len: csize_t(len(deviceName)))))
proc create*(T: type QCamera, cameraInfo: gen_qcamerainfo.QCameraInfo): QCamera =

  QCamera.init(fcQCamera_new3(cameraInfo.h))
proc create*(T: type QCamera, position: QCameraPosition): QCamera =

  QCamera.init(fcQCamera_new4(cint(position)))
proc create2*(T: type QCamera, parent: gen_qobject.QObject): QCamera =

  QCamera.init(fcQCamera_new5(parent.h))
proc create*(T: type QCamera, deviceName: seq[byte], parent: gen_qobject.QObject): QCamera =
